// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty form without data 1`] = `
<div
  className="root"
>
  Communications
  <div
    className="title"
  >
    <mock-FormattedMessage
      defaultMessage="Communications"
      id="communicationsPage.communicationsText"
    />
  </div>
  <p>
    <mock-FormattedMessage
      defaultMessage="We'd like to stay in touch. Please check the boxes next to the communications you'd like to receive."
      id="communicationsPage.optInText"
    />
  </p>
  <form
    className="form"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="isSubscribed"
      >
        Venia E-Newsletter
      </label>
      <label
        className="root"
      >
        <input
          checked={true}
          className="input"
          id="00000000-0000-4000-8000-000000000000"
          name="isSubscribed"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 11 12 14 22 4"
            />
            <path
              d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Stay on the cutting edge of fashion; subscribe to the monthly Venia Newsletter.
        </span>
      </label>
      <p
        className="root"
      />
    </div>
    <div
      className="buttonsContainer"
    >
      <button
        className="root_highPriority"
        disabled={false}
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="submit"
      >
        <span
          className="content"
        >
          Save Changes
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`renders form error 1`] = `
<div
  className="root"
>
  Communications
  <div
    className="title"
  >
    <mock-FormattedMessage
      defaultMessage="Communications"
      id="communicationsPage.communicationsText"
    />
  </div>
  <p>
    <mock-FormattedMessage
      defaultMessage="We'd like to stay in touch. Please check the boxes next to the communications you'd like to receive."
      id="communicationsPage.optInText"
    />
  </p>
  <form
    className="form"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="isSubscribed"
      >
        Venia E-Newsletter
      </label>
      <label
        className="root"
      >
        <input
          checked={true}
          className="input"
          id="00000000-0000-4000-8000-000000000000"
          name="isSubscribed"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 11 12 14 22 4"
            />
            <path
              d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Stay on the cutting edge of fashion; subscribe to the monthly Venia Newsletter.
        </span>
      </label>
      <p
        className="root"
      />
    </div>
    <div
      className="buttonsContainer"
    >
      <button
        className="root_highPriority"
        disabled={false}
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="submit"
      >
        <span
          className="content"
        >
          Save Changes
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`renders prefilled form with data with disabled buttons 1`] = `
<div
  className="root"
>
  Communications
  <div
    className="title"
  >
    <mock-FormattedMessage
      defaultMessage="Communications"
      id="communicationsPage.communicationsText"
    />
  </div>
  <p>
    <mock-FormattedMessage
      defaultMessage="We'd like to stay in touch. Please check the boxes next to the communications you'd like to receive."
      id="communicationsPage.optInText"
    />
  </p>
  <form
    className="form"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="isSubscribed"
      >
        Venia E-Newsletter
      </label>
      <label
        className="root"
      >
        <input
          checked={false}
          className="input"
          id="00000000-0000-4000-8000-000000000000"
          name="isSubscribed"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Stay on the cutting edge of fashion; subscribe to the monthly Venia Newsletter.
        </span>
      </label>
      <p
        className="root"
      />
    </div>
    <div
      className="buttonsContainer"
    >
      <button
        className="root_highPriority"
        disabled={true}
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="submit"
      >
        <span
          className="content"
        >
          Saving
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`renders prefilled form with data with enabled buttons 1`] = `
<div
  className="root"
>
  Communications
  <div
    className="title"
  >
    <mock-FormattedMessage
      defaultMessage="Communications"
      id="communicationsPage.communicationsText"
    />
  </div>
  <p>
    <mock-FormattedMessage
      defaultMessage="We'd like to stay in touch. Please check the boxes next to the communications you'd like to receive."
      id="communicationsPage.optInText"
    />
  </p>
  <form
    className="form"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="isSubscribed"
      >
        Venia E-Newsletter
      </label>
      <label
        className="root"
      >
        <input
          checked={false}
          className="input"
          id="00000000-0000-4000-8000-000000000000"
          name="isSubscribed"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Stay on the cutting edge of fashion; subscribe to the monthly Venia Newsletter.
        </span>
      </label>
      <p
        className="root"
      />
    </div>
    <div
      className="buttonsContainer"
    >
      <button
        className="root_highPriority"
        disabled={false}
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="submit"
      >
        <span
          className="content"
        >
          Save Changes
        </span>
      </button>
    </div>
  </form>
</div>
`;
